--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,5 @@
 line-length = 120
+indent-width = 2
 
 [lint]
 # 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
@@ -14,5 +15,3 @@ unfixable = ["B"]
 [lint.per-file-ignores]
 "__init__.py" = ["E402"]
 "**/{tests,docs,tools}/*" = ["E402"]
-
-[format]
