--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,26 @@ amphetype = [
     "data/about.html",
     "data/wordlists/*.txt"
 ]
+
+[tool.ruff]
+line-length = 120
+indent-width = 2
+
+[tool.ruff.format]
+indent-style = "space"
+quote-style = "double"
+
+[tool.ruff.lint]
+# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
+select = ["E4", "E7", "E9", "F", "B"]
+
+# Avoid enforcing line-length violations (`E501`)
+ignore = ["E501"]
+
+# Avoid trying to fix flake8-bugbear (`B`) violations.
+unfixable = ["B"]
+
+[tool.ruff.lint.per-file-ignores]
+# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
+"__init__.py" = ["E402"]
+"**/{tests,docs,tools}/*" = ["E402"]
