update html formatter line length for zed

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -6,6 +6,9 @@
   "languages": {
     "Python": {
       "language_servers": ["ruff"]
+    },
+    "HTML": {
+      "preferred_line_length": 120
     }
   }
 }
