added ItemStatistic dataclass
added ability to read data from the statistic table for use with
the lesson builder.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python Debugger: Current File",
+            "name": "Debug Amphetype",
             "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
+            "program": "${workspaceFolder}/amphetype/main.py",
             "console": "integratedTerminal"
         },
     ]
